<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="@layout/nav_drawer">


        <item
            android:id="@+id/navigation_home"
            android:title="@string/Home"
            android:icon="@drawable/ic_dashboard_black_24dp"/>
        <item
            android:id="@+id/navigation_Package"
            android:icon="@drawable/ic_fashion"
            android:title="@string/Package" />
        <item
            android:id="@+id/navigation_Outlet"
            android:icon="@drawable/ic_laundry_shop"
            android:title="@string/Outlet" />
        <item
            android:id="@+id/navigation_Users"
            android:icon="@drawable/ic_customer"
            android:title="@string/Users" />
        <item
            android:id="@+id/navigation_Transaction"
            android:icon="@drawable/ic_transaction"
            android:title="@string/Transaction" />



</menu>